--- a/index.html
+++ b/index.html
@@ -67,6 +67,20 @@
 
           <li class="contact-item">
 
+            <div class="icon-box">
+              <ion-icon name="location-outline"></ion-icon>
+            </div>
+
+            <div class="contact-info">
+              <p class="contact-title">Location</p>
+
+              <address>Oslo, Norway</address>
+            </div>
+
+          </li>
+
+          <li class="contact-item">
+
             <!-- <div class="icon-box">
               <a href="mailto:julianpfAtuioDotno" class="contact-link">
                 <ion-icon name="mail-outline"></ion-icon>
@@ -93,46 +107,26 @@
                 </a>
               </li>
 
+              <li class="social-item">
+                <a href="https://www.linkedin.com/in/julian-fuhrer-503817202/" class="social-link">
+                  <ion-icon name="logo-linkedin"></ion-icon>
+                </a>
+              </li>
+
+              <li class="social-item">
+                <a href="https://github.com/juuf" class="social-link">
+                  <ion-icon name="logo-github"></ion-icon>
+                </a>
+              </li>
+
             </ul>
-
-            <!-- <li class="icon-box">
-              <a href="https://twitter.com/jupfuh" class="social-link">
-                <ion-icon name="mail-outline"></ion-icon>
-              </a>
-            </li> -->
-            <!-- <div class="contact-info"> -->
-              <!-- <p class="contact-title">Email</p> -->
-
-              <!-- <a href="mailto:julianpfAtuioDotno" class="contact-link">julianpfAtuioDotno</a> -->
-            <!-- </div> -->
-
-          </li>
-
-          <li class="contact-item">
-
-            <div class="icon-box">
-              <ion-icon name="location-outline"></ion-icon>
-            </div>
-
-            <div class="contact-info">
-              <p class="contact-title">Location</p>
-
-              <address>Oslo, Norway</address>
-            </div>
-
           </li>
 
         </ul>
 
-        <div class="separator"></div>
+        <!-- <div class="separator"></div>
 
         <ul class="social-list">
-
-          <!-- <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
-            </a>
-          </li> -->
 
           <li class="social-item">
             <a href="https://twitter.com/jupfuh" class="social-link">
@@ -142,7 +136,7 @@
 
         </ul>
 
-      </div>
+      </div> -->
 
     </aside>
 
