--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
 
       <div class="sidebar-info">
 
-        <!-- <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
-        </figure> -->
+        <figure class="avatar-box">
+          <!-- <img src="./assets/images/Pro.jpg" alt="Julian Fuhrer" width="120"> -->
+          <img class="avatar" src="./assets/images/Pro3.jpg" width="140" />
+        </figure>
 
         <div class="info-content">
           <h1 class="name" title="Julian Fuhrer">Julian Fuhrer</h1>
